--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,14 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
-a {
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -68,4 +74,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
