--- a/src/Pages/RegisterPage/RegisterCard.css
+++ b/src/Pages/RegisterPage/RegisterCard.css
@@ -1,9 +1,7 @@
-.validPass {
-  color: green;
-  background-color: white;
-}
-
-.invalidPass {
-  color: red;
-  background-color: blue;
+::-webkit-calendar-picker-indicator {
+  filter: invert(1)
+          brightness(100%)
+          sepia(0)
+          saturate(10000%)
+          hue-rotate(0deg)
 }
