--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Anuphan:wght@100;300;400;500&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=Anuphan:wght@100;300;400;500&display=swap'); */
 
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
