--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   -webkit-text-size-adjust: 100%;
 }
 body {
+  width: 100%;
   margin: 0;
   display: flex;
   place-items: center;
@@ -33,6 +34,15 @@ body {
 
 
 @media (max-width: 800px) {
+  #root {
+    padding: 0;
+  }
+
+  body {
+
+    padding: 0;
+  }
+
   .authModalComponent {
     width: 85vw;
   }
@@ -45,7 +55,11 @@ body {
     width: 100vw;
   }
 
-  .timeQuestionComponent {
+  .showQuestionComponent {
     width: 100vw;
+  }
+
+  .listComponent label {
+    /* margin-left: 30px; */
   }
 }
