--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,19 @@ body {
   margin: 5px;
 }
 
+.genericButtonStyle {
+  height: 50px;
+  min-width: 50px;
+  margin: 10px;
+  color: #ee9e09;
+  border-radius: 15px;
+  font-weight: 800;
+  font-size: 22px;
+  font-family: Poppins, sans seriff;
+  text-shadow: 0.1px 0.1px white;
+  border: 0.5px solid;
+}
+
 @media (max-width: 900px) {
   #root {
     padding: 0;
@@ -73,5 +86,6 @@ body {
     margin: 2px;
   }
 
+  
   
 }
