--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Anuphan:wght@100;300;400;500&display=swap'); */
 
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
 :root {
   font-family: 'Poppins', sans-serif;
