--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Anuphan:wght@100;300;400;500&display=swap'); */
+
+@font-face {
+  font-family: 'Poppins';
+  src: url(./assets/Poppins/Poppins/Poppins-Medium.ttf);
+}
+
 :root {
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
